// Copyright 2022 Prysmatic Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package theqrl.zond.v1;

import "proto/zond/ext/options.proto";

option csharp_namespace = "TheQRL.Zond.V1";
option go_package = "github.com/theQRL/qrysm/proto/zond/v1";
option java_multiple_files = true;
option java_outer_classname = "WithdrawalsProto";
option java_package = "org.theqrl.zond.v1";
option php_namespace = "TheQRL\\Zond\\v1";

// The message requesting a Dilithium to execution withdrawal credentials change
message DilithiumToExecutionChange {
  // The validator index requesting the change
  uint64 validator_index = 1 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/primitives.ValidatorIndex"];

  // The public key of the Dilithium address requesting the change
  bytes from_dilithium_pubkey = 2 [(theqrl.zond.ext.ssz_size) = "2592"];

  // The new execution address to be the withdrawal credentials
  bytes to_execution_address = 3 [(theqrl.zond.ext.ssz_size) = "20"];
}

// The signed version of a DilithiumToExecutionChange
message SignedDilithiumToExecutionChange {
  // The DilithiumToExecutionChange message itself
  DilithiumToExecutionChange message = 1;

  // The 4595 byte Dilithium signature from the withdrawal address requesting the change
  bytes signature = 2 [(theqrl.zond.ext.ssz_size) = "4595"];
}

// A list of SignedDilithiumToExecutionChange objects
message SubmitDilithiumToExecutionChangesRequest {
  repeated SignedDilithiumToExecutionChange changes = 1;
}
